--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@
   button {
     margin: 10px 5px;
     padding: 10px 20px;
-    font-size: 15spx;
+    font-size: 15px;
     cursor: pointer;
     background-color: #007BFF;
     color: white;
@@ -141,6 +141,34 @@
     position: absolute;
     left: 7%;
     top: 40%;
+    font-size: 20px;
+  }
+
+  #currentProtection {
+    position: absolute;
+    left: 7%;
+    top: 45%;
+    font-size: 20px;
+  }
+
+  #forcePercentage {
+    position: absolute;
+    left: 7%;
+    top: 55%;
+    font-size: 20px;
+  }
+
+  #upgradeCost {
+    position: absolute;
+    left: 7%;
+    top: 60%;
+    font-size: 20px;
+  }
+
+  #sellCost {
+    position: absolute;
+    left: 7%;
+    top: 65%;
     font-size: 20px;
   }
 
